[package]
name = "dark-matter"
version = "0.1.0"
edition = "2021"
description = "Dark matter - simple vault CLI utility with GPG encryption"
authors = ["Your Name <classx@gmail.com>"]
license = "MIT"

[[bin]]
name = "dark-matter"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
gpgme = "0.11"
rusqlite = { version = "0.30", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
strip = true
